--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,30 +2,285 @@
 // endbower
 
 body {
-  background: #fafafa;
+  background-color: white;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
+  margin: 0px;
+  padding: 0px;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+// @media (min-width: 320px) {
+//   .container{
+//     padding: 0 0px; 
+//   }
+// }
+
+// @media (min-width: 800px) {
+//   .container{
+//     padding: 0 2%; 
+//   }
+// }
+
+// @media (min-width: 1200px) {
+//   .container{
+//     padding: 0 25px; 
+//   }
+// }
+
+// @media (min-width: 1300px) {
+// }
+.container{
+  padding: 0 75px; 
+}
+
+.header{
+  padding-top: 40px;
+  height: 72px;
+  border-bottom: solid 1px #f7e5e2;
+  .right, .left{
+    width: 50%;
+    float: left;
+  }
+  .right{
+    text-align: right;
+    position: relative;
+  }
+  .logo{
+    background-image: url("/images/logo.png");
+    width: 153px;
+    height: 45px;
+  }
+  .phone{
+    background-image: url("/images/phone.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    padding-left: 30px; 
+    line-height: 30px;
+    height: 30px;
+    width: 210px;
+    color: #5a4744;
+    font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 24px;
+    position: absolute;
+    right: 0;
+    top: 9px;
   }
 }
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+.main-cover{
+  margin-top: 51px;
+  background-image: url("/images/main-cover.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  height: 840px;
+  position: relative;
+  .main-h1{
+    text-align: center;
+    position: absolute;
+    margin-top: 345px;
+    width: 100%;
+    height: 106px;
+    color: white;
+    font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 76px;
+    line-height: 106px;
+  }
+  .main-h2{
+    text-align: center;
+    position: absolute;
+    margin-top: 487px;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+    color: white;
+    font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 28px;
+    line-height: 42px;
+  }
+}
+
+.collection-header{
+  margin-top: 70px;
+  height: 106px;
+  color: #d87c6d;
+  font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 42px;
+  line-height: 106px;
+}
+
+ol, ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+.items{
+  .item{
+    width: 33.33333333%;
+    float: left;
+    margin-bottom: 40px;
+    .image{
+      width: 100%;
+      img{
+        width: 100%;
+      }
+    }
+    .name-price{
+      .name, .price{
+        width: 50%;
+        float: left;
+      }
+      .name{
+        color: #5a4744;
+        font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        font-size: 24px;
+        height: 72px;
+        line-height: 72px;
+      }
+      .price{
+        text-align: right;
+        color: #d87c6d;
+        font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        font-weight: bold;
+        font-size: 24px;
+        height: 72px;
+        line-height: 72px;
+      }
+    }
+    .fabric{
+      color: #929292;
+      font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-size: 18px;
+      line-height: 72px;
+    }
+  }
+}
+
+.details{
+  .detail, .image{
+    float: left;
+  }
+  .detail{
+    width: 30.3333333%;
+    padding-left: 2%;
+    padding-right: 1%;
+    .name{
+      color: #5a4744;
+      font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-size: 36px;
+      line-height: 72px;
+    }
+    .fabric{
+      color: #929292;
+      font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-size: 18px;
+      line-height: 72px;
+    }
+    .price{
+      color: #d87c6d;
+      font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 40px;
+      border-bottom: solid 1px #f7e5e2;
+    }
+
+    .description-name, .equipment-name{
+      margin-top: 35px;
+      margin-bottom: 20px;
+      color: #5a4744;
+      font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-size: 18px;
+      line-height: 30px;
+      font-weight: bold;
+    }
+    .description, .equipment{
+      color: #5a4744;
+      font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-size: 18px;
+      line-height: 30px;
+    }
+    .button{
+      .left-button{
+        float: left;
+        width: 20%;
+      }   
+      .pink-button{
+        margin-top: 20px;
+        padding: 0px;
+        border: 0px;
+        cursor: pointer;
+        width: 60%;
+        line-height: 70px;
+        background-color: #e1624e;
+        color: white;
+        font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        font-size: 24px;
+      }
+    }
+  }
+  .image{
+    width: 66.66666666%;
+    position: relative;
+    .close{
+      cursor: pointer;
+      position: absolute;
+      width: 70px;
+      height: 70px;
+      background-color: #e1624e;
+      right: 0px;
+      background-image: url("/images/close.png");
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+    img{
+      width: 100%;
+    }
+  }
+}
+
+.footer{
+  margin-top: 25px;
+  height: 180px;
+  border-top: solid 1px #f7e5e2;
+  line-height: 180px;
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  .left, .center, .right{
+    width: 33.33333333%;
+    float: left;
+    position: relative;
+  }
+  .copyring{
+    font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #5a4744;
+    font-size: 24px;
+    text-align: left;
+  }
+  .logo{
+    background-image: url("/images/logo.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+  }
+  .phone-block{
+    width: 100%;
+    position: relative;
+    .phone-ico{
+      position: absolute;
+      background-image: url("/images/phone.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      height: 30px;
+      width: 17px;
+      float: left;
+      top: 75px;
+    }
+    .phone{
+      font-family: MuseoSansCyrl, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-size: 24px;
+      text-align: right;
+    }
+  }
 }
